Fix an issue causing manage school page to overflow when drawer is being open on tablet size viewports

--- a/WheeluFront/src/pages/ManageSchool/ManageSchoolPage.module.css
+++ b/WheeluFront/src/pages/ManageSchool/ManageSchoolPage.module.css
@@ -3,6 +3,7 @@
 	flex-direction: column;
 	gap: 2em;
 	max-width: 1200px;
+	container-type: inline-size;
 }
 
 .Header {
@@ -25,20 +26,20 @@
 .RatingListItem {
 	width: 100%;
 	display: flex;
-	flex-direction: column!important;
-	align-items: flex-start!important;
+	flex-direction: column !important;
+	align-items: flex-start !important;
 	gap: 0.5em;
 }
 
 .NavCardHolder {
 	display: grid;
-    grid-template-columns: repeat(auto-fit, 150px);
+	grid-template-columns: repeat(auto-fit, 150px);
 	justify-content: center;
 	gap: 2em;
 }
 
 .NavCard {
-	border-radius: 0.5em!important;
+	border-radius: 0.5em !important;
 }
 
 .NavCardWrapper {
@@ -62,8 +63,8 @@
 
 .GoBackButton :global(.MuiButton-startIcon) {
 	position: absolute;
-    left: 0;
-    transform: translateY(1px);
+	left: 0;
+	transform: translateY(1px);
 }
 
 .RefetchingLoader {
@@ -89,16 +90,21 @@
 }
 
 @keyframes FadeInAnim {
-	from {opacity: 0} to {opacity: 1;}
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
 
-@media (min-width: 476px) {
+@container (min-width: 476px) {
 	.NavCardHolder {
 		justify-content: initial;
 	}
 }
 
-@media (min-width: 900px) {
+@container (min-width: 900px) {
 	.Wrapper {
 		margin-left: 4em;
 	}
@@ -107,7 +113,7 @@
 		flex-direction: row;
 		gap: 5em;
 	}
-	
+
 	.Header > ul {
 		flex: 1;
 	}
